...
    }
    [PsiFeedbackLogger error:@"MainViewController unhandled VPNStatus (%ld)", (long)status];
    return nil;
}

- (void)setupSettingsButton {
    settingsButton.accessibilityIdentifier = @"settings"; // identifier for UI Tests

    [settingsButton addTarget:self action:@selector(onSettingsButtonTap:) forControlEvents:UIControlEventTouchUpInside];

    UIImage *gearTemplate = [UIImage imageNamed:@"DarkGear"];
    [settingsButton setImage:gearTemplate forState:UIControlStateNormal];

...
    settingsButton = [[AnimatedUIButton alloc] init];
    psiphonLargeLogo = [[UIImageView alloc] initWithImage:[UIImage imageNamed:@"PsiphonLogoWhite"]];
    psiphonTitle = [[UIImageView alloc] initWithImage:[UIImage imageNamed:@"PsiphonTitle"]];
    psiCashWidget = [[PsiCashWidgetView alloc] initWithLocale:currentLocale];
    startAndStopButton = [VPNStartAndStopButton buttonWithType:UIButtonTypeCustom];
    statusLabel = [[UILabel alloc] init];
    regionSelectionButton = [[RegionSelectionButton alloc] init];
    regionSelectionButton.accessibilityIdentifier = @"regionSelectionButton"; // identifier for UI Tests
    bottomBarBackground = [[UIView alloc] init];
    subscriptionBarView = [SwiftDelegate.bridge makeSubscriptionBarView];

    // NOTE: some views overlap so the order they are added
    //       is important for user interaction.
...
    
    [psiCashWidget.speedBoostButton addTarget:self
                                       action:@selector(speedBoostButtonTapped)
                             forControlEvents:UIControlEventTouchUpInside];
    
    // Sets accessibilityIdentifier for PsiphonUITests
    psiCashWidget.speedBoostButton.accessibilityIdentifier = @"psiCashWidgetSpeedBoostButton";
    
    // Makes balance view tappable
    UITapGestureRecognizer *tapRecognizer = [[UITapGestureRecognizer alloc]
                                             initWithTarget:self
                                             action:@selector(addPsiCashButtonTapped)];
    [psiCashWidget.balanceViewWrapper.view addGestureRecognizer:tapRecognizer];
...
