...
        }
        
        closeButton.setEventHandler { [unowned self] in
            self.dismiss(animated: true, completion: nil)
        }
        
        closeButton.accessibilityIdentifier = "psiCashScreenCloseButton"
        
        vStack.addArrangedSubviews(
            signupOrLogInView,
            tabControl.view,
            containerView.view
        )
...
